<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.search.SearchFragment"
    android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:background="@color/colorPrimaryDark">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="Search"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="12dp"
                android:layout_marginTop="6dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/round_border_black"
                android:backgroundTint="@android:color/white"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    style="@style/Image25"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="6dp"
                    android:src="@drawable/ic_search_24px"
                    tools:ignore="ContentDescription" />

                <SearchView
                    android:id="@+id/search_input"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:inputType="text"
                    android:queryHint="@string/search_user"
                    android:theme="@style/SearchViewTheme"
                    android:searchIcon="@null"/>

            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/movie_card">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/movies"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_mv_rv"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/tv_card">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_shows"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/search_tv_rv"/>
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/person_card">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:fontFamily="sans-serif-medium"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="18sp"/>
                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/search_person_rv"
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/divider" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>